[package]
name = "st2-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
async-trait = "0.1"
chrono = "0.4.43"
dotenv = "0.15.0"
futures = "0.3.31"
google-sheets4 = "*"
hyper = "1.8.1"
hyper-rustls = "0.27.7"
log = "0.4.29"
poise = "0.6.1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = { version = "0.12.5", features = ["client", "gateway", "rustls_backend", "model", "utils"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "time"] }
url = "2.5.8"
yup-oauth2 = "12.1.2"
